# zcoil

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKEND_FEATURES_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FRONTEND_PAGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README_COMPLETE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: ci-cd.yml  main.yml
.trunk/: trunk.yaml
backend/crm-service/: Dockerfile  main.py  requirements.txt
backend/crm-service/app/: __init__.py
backend/crm-service/schemas/: __init__.py  customer.py
backend/crm-service/services/: __init__.py  customer_service.py
backend/crm-service/tests/: __init__.py  conftest.py
backend/crm-service/tests/test_api/: test_customers.py
backend/crm-service/tests/test_services/: test_customer_service.py
backend/inventory-service/: Dockerfile  main.py  requirements.txt
backend/inventory-service/app/: __init__.py
backend/inventory-service/models/: __init__.py  base.py  product.py
backend/inventory-service/schemas/: product.py
backend/inventory-service/services/: __init__.py  product_service.py
backend/inventory-service/tests/: __init__.py  conftest.py
backend/inventory-service/tests/test_api/: test_items.py
backend/inventory-service/tests/test_models/: test_product.py
backend/inventory-service/tests/test_services/: test_product_service.py
backend/notification-service/: Dockerfile  main.py  requirements.txt
backend/notification-service/models/: base.py  notification.py
backend/notification-service/services/: notification_service.py
backend/notification-service/tests/: conftest.py
backend/notification-service/tests/test_api/: test_notifications.py
backend/shared/: __init__.py  requirements.txt
backend/shared/audit/: __init__.py  audit_service.py  models.py
backend/shared/auth/: __init__.py
backend/shared/config/: __init__.py
backend/shared/database/: Dockerfile  __init__.py  alembic.ini  migrate.py
backend/shared/database/migrations/: env.py
backend/shared/email/: __init__.py  email_service.py  templates.py
backend/shared/grpc/: __init__.py
backend/shared/storage/: __init__.py  file_service.py  models.py
backend/shared/utils/: __init__.py
backend/user-service/: main.py  requirements.txt
backend/user-service/app/: __init__.py
backend/user-service/models/: __init__.py  base.py  user.py
backend/user-service/schemas/: __init__.py  user.py
backend/user-service/services/: __init__.py  auth_service.py  user_service.py
backend/user-service/tests/: conftest.py
backend/user-service/tests/test_api/: test_auth.py
ci-cd/.github/workflows/: ci.yml
frontend/: jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/__tests__/components/: RecordsDashboard.test.tsx
frontend/src/__tests__/pages/: login.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/crm/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/types/: api.ts  product.ts  user.ts
inventory-service/schemas/: __init__.py
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/ssl/: .gitkeep
nginx/templates/: nginx.conf.template
notification-service/schemas/: notification.py
scripts/: init-db.sql  setup.sh  test-integration.sh
(+68 files in other folders)
